tests/paczka1/small_fuzzy/26855399.err
Error in line 4: EKg S352 58,8
Error in line 1: UUAOUDk4cK S712 36,1
